FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
SET (project_LIBS ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARY}  ${SFML_GRAPHICS_LIBRARY_DYNAMIC_RELEASE}  ${SFML_SYSTEM_LIBRARY_DYNAMIC_RELEASE} ${SFML_WINDOW_LIBRARY_DYNAMIC_RELEASE} ${SFML_NETWORK_LIBRARY_DYNAMIC_RELEASE} ${OPENAL_LIBRARY})
SET (project_BIN ${PROJECT_NAME})

ADD_EXECUTABLE(${project_BIN} ${project_SRCS} glyphs.o)
TARGET_LINK_LIBRARIES(${project_BIN} ${project_LIBS})

SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)

#TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_constexpr)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -std=c++14 -xHOST -ipo -no-prec-div -fp-model fast=2 -static-intel -parallel")

# -fopt-info-vec-missed

INSTALL(TARGETS ${project_BIN} DESTINATION bin)
